# Data-Science-Practical-Tasks

./: .gitignore  README.md  pyproject.toml
PR1_BigData_Optimization/: README.md  main.py
PR1_BigData_Optimization/metadata/: preview_sample.json  selected_cols.json
PR2/: README.md  main.py
PR3/: README.md  main.py
PR4/: README.md  main.py
PR5/: README.md  main.py
PR6/: README.md  main.py
project/: README.md  main.py
