[project]
name = "datasciencepr1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandas-stubs~=3.0.0",
    "plotly>=6.7.0",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.21.0",
]
